# smppserver

./: .env  Cargo.toml  PKGBUILD  README.md  lds_deploy.sh  run.sh  smppgc.html  smppgc.toml
lmetrics/: Cargo.toml
lmetrics/src/: httpmetrics.rs  lib.rs  nanohttp.rs  rocket.rs
migrations/: 20240902154323_name_links.down.sql  20240902154323_name_links.up.sql
smppgc/: Cargo.toml  Rocket.toml  gen_js.sh  ldeveuorg_site.service  smppgc.service
smppgc/js/: index.js  mkels.js  ui.js  ws.js
smppgc/src/: chat.rs  chat2.rs  client.rs  config.rs  debug.rs  dropvec.rs  http.rs  key.rs  main.rs  mesg_filter.rs  profanity.rs  ratelimit.rs  socket.rs  static_routing.rs  template.rs  userinfo.rs  usernamemgr.rs
smppgc/src/chat/: client.rs  message.rs  mod.rs  packet.rs  usernamemgr.rs
smppgc/src/db/: mod.rs
smppgc/src/names/: mod.rs  userid.rs
smppgc/src/template/: mod.rs
smppgc/src/utils/: dropvec.rs  mod.rs  static_routing.rs
smppgc/src/wsprotocol/: mod.rs  packets.rs
smppgc/www/static/: v1.css  v1.js
smppgc/www/templates/: chat.html.hbs  login_popup.html.hbs  v1.html.hbs
smppglobalchat/: Cargo.toml
smppglobalchat/src/: config.rs  main.rs
smppserver/: Cargo.toml
smppserver/src/: globalchat.rs  main.rs
string_tree/: Cargo.toml
string_tree/src/: lib.rs  wordlist.rs
