[package]
name = "smppgc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stderrlog={version="0.6.0"}
tungstenite={version="0.23.0"}
log={version="0.4.21"}
uuid={version="1.8.0", features=["v4"]}
thiserror={version="1.0.61"}
toml={version="0.8.14"}
serde={version="1.0.203", features=["derive"]}
threadpool={version="1.8.1"}
base64={version="0.22.1"}
