[package]
name = "smppgc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite={version="0.21.0"}
tokio={version="1.38.0", features=["macros", "rt-multi-thread", "sync"]}
futures-util={version="0.3.30"}
uuid={version="1.9.0", features=["v4"]}
urlencoding={version="2.1"}
thiserror={version="1.0.61"}
toml={version="0.8.14"}
serde={version="1.0.203", features=["derive"]}
base64={version="0.22.1"}
lmetrics={path="../lmetrics"}

rocket={version="0.5.1"}
rocket_ws={version="0.1.1"}
