[package]
name = "smppgc"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite={version="0.21.0"}
tokio={version="1.38.0", features=["macros", "rt-multi-thread", "sync"]}
futures-util={version="0.3.30"}
log={version="0.4.21"}
uuid={version="1.9.0", features=["v4"]}
thiserror={version="1.0.61"}
base64={version="0.22.1"}
lmetrics={path="../lmetrics", features=["rocket"]}

rocket={version="0.5.1"}
rocket_ws={version="0.1.1"}
rocket_dyn_templates={version="0.2.0", features=["handlebars"]}
